force-app/main/default/objects/OutletLocale__c.object
<CustomObject>
    <fields>
        <fullName>OLCountry__c</fullName>
        <label>OLCountry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OLProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OLProduct</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Outlet Locales</relationshipLabel>
        <relationshipName>Outlet_Locales</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OLRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OLRequired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OLType__c</fullName>
        <label>OLType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
                <value>
                    <fullName>Enable</fullName>
                </value>
                <value>
                    <fullName>Disable</fullName>
                </value>
                <value>
                    <fullName>Enable &amp; Add</fullName>
                </value>
                <value>
                    <fullName>Disable &amp; Remove</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
                <value>
                    <fullName>Show &amp; Add</fullName>
                </value>
                <value>
                    <fullName>Hide &amp; Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Outlet Locale</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OLCountry__c</columns>
        <columns>OLProduct__c</columns>
        <columns>OLType__c</columns>
        <columns>OLRequired__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OL-{0000}</displayFormat>
        <label>Outlet Locale Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outlet Locales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>